<resources>
    <string name="app_name">Carrito</string>
    <string name="action_settings">Settings</string>

    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_direccion">Direccion</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_telefono">Telefono</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="firma_title">Registrate</string>
</resources>
